# ml-homelab-setup

./: .gitignore  README.md  pyproject.toml
docs/: diary.md
docs/superpowers/specs/: 2026-06-12-ml-homelab-setup-design.md
scripts/bootstrap/: README.md  check_env.py  check_env.txt  install_cuda.sh  install_cuda_container_kit.sh  install_cudnn_nccl.sh  install_docker.sh  install_driver.sh  run_nccl_test.sh  run_nccl_test_multinode.sh  test_nccl.py
scripts/gpu/: .env.example  README.md  check_env.py  gpu_fans.py  gpu_idle_alert.sh  gpu_power.py  send_email.py  setup_crontab.sh
scripts/inference/: README.md  _common.sh  serve_multi_node_cluster.sh
scripts/inference/bench/: bench_serving.py  bench_serving.sh  compare.py
scripts/inference/sglang/: serve_multi_gpu.sh  serve_multi_node.sh  serve_pd_disaggregation.sh  serve_single_gpu.sh
scripts/inference/vllm/: serve_multi_gpu.sh  serve_multi_node.sh  serve_pd_disaggregation.sh  serve_single_gpu.sh
scripts/kernel/: README.md  _attn_common.py  _triton_attn.py  bench_attention.py  bench_marlin.py  test_flashattn.py  test_flashinfer.py  test_sageattn.py  test_sdpa.py  test_sgl_kernel.py  test_triton_attn.py  test_xformers.py
scripts/monitoring/: README.md
scripts/monitoring/grafana/: docker-compose.yml
scripts/monitoring/node-exporter/: docker-compose.yml
scripts/monitoring/nvidia-smi-exporter/: docker-compose.yml
scripts/monitoring/prometheus/: docker-compose.yml  prometheus.yml
scripts/train/: README.md  run_multi_gpu.sh  run_multi_node.sh  run_single_gpu.sh  train.py
